2020-06-03  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'last commit' badge

	* .travis.yml (dist): Switch to bionic

2019-06-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Author): Use name without email as in other packages

2018-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/Ziggurat.h (Ziggurat): Added parameter getter and
	setter covering the four internal parameters
	* src/ziggurat.cpp (zgetpars, zsetpars): Added accessors

	* man/ziggurat.Rd: Added documentation

	* src/init.c: Deleted, content now in RcppExports.cpp
	* src/RcppExports.cpp: Updated

	* inst/NEWS.Rd: Updated

	* .travis.yml: Run Travis with Docker and rcpp/plus container

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch Travis CI to R 3.5 repo

2018-08-17  Blagoje Ivanovic  <blagoje.r.ivanovic@gmail.com>

	* vignettes/RcppZiggurat.Rmd: Correct several typos

2018-06-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.5

	* vignettes/header.tex: Split off vignette as pandoc 2.* no longer
	allows embedding this in the header [CRAN request]
	* vignettes/bib.tex: Idem, also updated entries
	* vignettes/RcppZiggurat.Rmd: Use bib.tex and header.tex

	* tests/zigguratTest.Rout.save: Updated for minor rounding issue

2017-10-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/init.c: Re-added with manual entry for user_norm_rand()
	* src/RcppExport.cpp: Remove dynamic registration part

2017-10-09  Ralf Stubner  <ralf.stubner@r-institute.com>

	* inst/include/Ziggurat.h: Correct state when setting seed
	* tests/zigguratTest.R: Adjust tests
	* tests/zigguratTest.Rout.save: Idem

2017-09-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description): Rewrote using <doi:...> URLs

2017-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New release
